preparing for move tour code

--- a/Views/TourSites/Create.cshtml
+++ b/Views/TourSites/Create.cshtml
@@ -59,7 +59,7 @@
                 <div class="form-group">
                     <label name="TourDescription" class="control-label">Description</label>
                     <textarea id="tiny" name="TourDescription" class="form-control" value="@Model.TourDescription"></textarea>
-                    <span asp-validation-for="TourSite.Description" class="text-danger"></span>
+                    <span asp-validation-for="@Model.TourDescription" class="text-danger"></span>
                 </div>
             </table>
 
