--- a/Views/TourSites/MoveTour.cshtml
+++ b/Views/TourSites/MoveTour.cshtml
@@ -3,18 +3,12 @@
 @inject IAuthorizationService auth
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Move Tour";
 
 
     AuthorizationResult authorized1 = await auth.AuthorizeAsync(User, null, "TourAccess");
 
 }
-
-<div class="modal-header">
-    <button class="close" data-dismiss="modal" aria-hidden="true" onclick="$('#myModal').modal('hide');">×</button>
-    <h2>Users</h2>
-</div>
-
 
 @if (authorized1.Succeeded)
 {
@@ -22,7 +16,7 @@
 
     @* Maybe not standard, but I am using the presence of this label as a boolean*@
 
-    <label id="canAddTour">Click to Add</label>
+    <h3 id="canAddTour">Click to move tour</h3>
     <br>
 
 
