simple tour movement

--- a/Views/TourSites/Edit.cshtml
+++ b/Views/TourSites/Edit.cshtml
@@ -109,6 +109,8 @@
 
             <table class="table table-sm" cellpadding="0" cellspacing="0" border="0">
 
+
+                <a asp-action="MoveTour" asp-route-id="@Model.TourID">Move</a>
                 <thead class="form-group">
                     <tr>
                         <td class="col-sm-2">
