--- a/Views/TourSites/Edit.cshtml
+++ b/Views/TourSites/Edit.cshtml
@@ -110,7 +110,6 @@
             <table class="table table-sm" cellpadding="0" cellspacing="0" border="0">
 
 
-                <a asp-action="MoveTour" asp-route-id="@Model.TourID">Move</a>
                 <thead class="form-group">
                     <tr>
                         <td class="col-sm-2">
@@ -130,6 +129,8 @@
                 
 
             </table>
+            <a asp-action="MoveTour" asp-route-id="@Model.TourID">Move Tour</a>
+
 
             <table class="table table-sm" cellpadding="0" cellspacing="0" border="0">
 
