--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,12 +1,38 @@
-﻿@{
+﻿@using TourWebsite.Data
+@{
     ViewData["Title"] = "Home Page";
 }
 
+@model TourWebsite.Areas.Identity.Data.NonTourPage
+@inject TourWebsiteContext _context
+
 <div>
-    <h4>Hello, welcome to the tour management website. Head to <a asp-controller="TourSites" asp-action="Index">tour sites</a> to see what tours are available.</h4>
 
 
-    <h5>Disclaimer: This site is work in progress. Do not utilize your real information or credentials</h5>
+    <table cellpadding="0" cellspacing="0" border="0" style="background-color:rgba(70, 130, 180, 0)">
+        <tr>
+            <td class="col-6" style="vertical-align: text-top;">
+                @Html.Raw(Model.Description)
+            </td>
+            <td class="=col-1"></td>
+            <td class="col-5" vertical-align: text-top;>
+
+                @{
+                    if (Model.ThumbnailID != null)
+                    {
+
+                        var file = await _context.UploadedFiles.FindAsync(Model.ThumbnailID);
+
+                        if (file != null)
+                        {
+                            @Html.Raw(file.HtmlString());
+                        }
+                    }
+
+                }
+            </td>
+        </tr>
+    </table>
 
 
 </div>
