--- a/Views/Role/Index.cshtml
+++ b/Views/Role/Index.cshtml
@@ -1,45 +1,40 @@
-﻿@model IEnumerable<TourWebsite.Areas.Identity.Data.TourWebsiteRole>
+﻿@using TourWebsite.Areas.Identity.Data
+@model ValueTuple<List<TourWebsiteRole>, List<NonTourPage>>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Manage User Roles</h1>
+<h3>Edit Website Pages</h3>
 
-@* <p> *@
-@*     <a asp-action="Create">Create New</a> *@
-@* </p> *@
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            @* <th> *@
-            @*     @Html.DisplayNameFor(model => model.NormalizedName) *@
-            @* </th> *@
-            @* <th> *@
-            @*     @Html.DisplayNameFor(model => model.ConcurrencyStamp) *@
-            @* </th> *@
-            <th></th>
-        </tr>
-    </thead>
+
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model.Item2)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    <a asp-controller="NonTourPages" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<h3>Manage User Roles</h3>
+
+<table class="table">
+    <tbody>
+@foreach (var item in Model.Item1) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            @* <td> *@
-            @*     @Html.DisplayFor(modelItem => item.NormalizedName) *@
-            @* </td> *@
-            @* <td> *@
-            @*     @Html.DisplayFor(modelItem => item.ConcurrencyStamp) *@
-            @* </td> *@
             <td>
                 <a asp-action="Update" asp-route-id="@item.Id">Update</a>
-                @* <a asp-action="Details" asp-route-id="@item.Id">Details</a> *@
-                @* <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> *@
             </td>
         </tr>
 }
