--- a/Views/TourSites/Create.cshtml
+++ b/Views/TourSites/Create.cshtml
@@ -28,7 +28,7 @@
             </table>
             <table class="table table-bordered table-sm">
                 <div class="form-group">
-                    <a href="javascript:void(0);" name="/File/AttachmentList" class="modalManager" extra-data='#ThumbnailData'>Pick Thumbnail</a>
+                    <a href="javascript:void(0);" name="/File/AttachmentList" class="modalManager btn btn-primary" extra-data='#ThumbnailData'>Pick Thumbnail</a>
                     <script type="application/json" id="ThumbnailData">
                         {
                         "Target": "ThumbnailBox",
@@ -43,7 +43,7 @@
 
             <table class="table table-bordered table-sm">
                 <div class="form-group">
-                    <a href="javascript:void(0);" name="/File/AttachmentList" class="modalManager" extra-data='#AudioData'>Pick Audio Track</a>
+                    <a href="javascript:void(0);" name="/File/AttachmentList" class="modalManager btn btn-primary" extra-data='#AudioData'>Pick Audio Track</a>
                     <script type="application/json" id="AudioData">
                         {
                         "Target": "AudioBox",
@@ -58,6 +58,7 @@
             <table class="table table-bordered">
                 <div class="form-group">
                     <label name="TourDescription" class="control-label">Description</label>
+                    <input id="descriptionVal" , type="hidden" class="form-control" value="@Model.TourDescription" />
                     <textarea id="tiny" name="TourDescription" class="form-control" value="@Model.TourDescription"></textarea>
                     <span asp-validation-for="@Model.TourDescription" class="text-danger"></span>
                 </div>
@@ -113,7 +114,7 @@
             <table class="table table-bordered table-sm">
                 <div type="email" class="form-group">
                     <label asp-for="Email" class="control-label">Add editors</label>
-                    <a href="javascript:void(0);" name="/Role/UserList" class="modalManager" extra-data='#MyScriptData'>Pick user</a>
+                    <a href="javascript:void(0);" name="/Role/UserList" class="modalManager btn btn-primary" extra-data='#MyScriptData'>Pick user</a>
                     <script type="application/json" id="MyScriptData">
                         {
                         "Target": "EmailBox"
@@ -133,7 +134,7 @@
             <table class="table table-bordered table-sm">
                 <div type="email" class="form-group">
                     <label asp-for="NextTourID" id="TourLabel" class="control-label">Next Tour:</label>
-                    <a href="javascript:void(0);" name="/TourSites/TourListPop" class="modalManager" extra-data='#TourSiteData'>Pick Next Tour</a>
+                    <a href="javascript:void(0);" name="/TourSites/TourListPop" class="modalManager btn btn-primary" extra-data='#TourSiteData'>Pick Next Tour</a>
                     <script type="application/json" id="TourSiteData">
                         {
                         "Target": "Next Tour",
@@ -164,7 +165,7 @@
 <div>
 
 
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-primary">Back to List</a>
 </div>
 
 
@@ -173,21 +174,7 @@
 
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
-
-    <script>
-        //Init rich text
-
-               tinymce.init({
-               selector: 'textarea#tiny',
-               license_key: 'gpl',
-               plugins: 'lists',
-               toolbar: 'numlist bullist',
-               promotion: false
-               });
-    </script>
-
+    @{await Html.RenderPartialAsync("TinyMce");}
 
 }
 
