--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Huntington Historic Tour</title>
+    <title>@ViewData["Title"] - Fairfield History WV</title>
     <script type="importmap"></script>
 
 
