tours are now sites

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TourSites" asp-action="Index">Tour Sites</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TourSites" asp-action="Index">Sites</a>
                         </li>
                         @if (authorized1.Succeeded) //Admins and editors
                         {
