--- a/Views/TourSites/Details.cshtml
+++ b/Views/TourSites/Details.cshtml
@@ -59,7 +59,7 @@ else {
 
                 if (nextAuth1.Succeeded || nextAuth2.Succeeded)
                 {
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@next.Id">Next Tour: @next.Title</a>
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@next.Id">Next Site: @next.Title</a>
                     
                 }
 
