--- a/Views/TourSites/Index.cshtml
+++ b/Views/TourSites/Index.cshtml
@@ -26,7 +26,7 @@
 
 @if (authorized1.Succeeded)
 {
-    <a class="btn btn-primary" asp-action="AddNewTour" style="background-color:@Model.MainColor; border-color:@Model.MainColor">Add New Tour</a>
+    <a class="btn btn-primary" asp-action="AddNewTour" style="background-color:@Model.MainColor; border-color:@Model.MainColor">Add New Site</a>
 }
 
 @section Scripts { 
