--- a/Views/TourSites/ListView.cshtml
+++ b/Views/TourSites/ListView.cshtml
@@ -17,7 +17,7 @@
 
     @if (authorized1.Succeeded)
     {
-        <a asp-action="Create">Create New!</a>
+        <a class="btn btn-primary" asp-action="Create">Add New Site</a>
     }
 
 </p>
