--- a/Views/TourSites/TourListPop.cshtml
+++ b/Views/TourSites/TourListPop.cshtml
@@ -56,7 +56,7 @@
                         emailBox2 = document.getElementById('@Model.Item3');
 
                         if (typeof (emailBox2) != 'undefined' && emailBox2) {
-                            emailBox2.textContent = `Next Tour: @item.Title`;
+                            emailBox2.textContent = `Next Site: @item.Title`;
                         }
                         $('#myModal').modal('hide');
 
